01/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: health-app
    spec:
      containers:
        - name: health-app
          image: rined/health:v1
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
              httpGet:
                port: web
                path: /health
              initialDelaySeconds: 30
              periodSeconds: 15
          readinessProbe:
              httpGet:
                port: web
                path: /health
              initialDelaySeconds: 5
              periodSeconds: 3
