01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
spec:
  selector:
    app: health-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: ClusterIP
